Made the ont adhere to the official guidelines of activator package

--- a/ont.medication/pom.xml
+++ b/ont.medication/pom.xml
@@ -42,10 +42,9 @@
 				<configuration>
 					<instructions>
 						<Bundle-Name>${project.name}</Bundle-Name>
-						<Bundle-Activator>org.universAAL.ontology.impl.Activator</Bundle-Activator>
 						<Bundle-Description>${project.description}</Bundle-Description>
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
-						<Private-Package>org.universAAL.ontology.impl</Private-Package>
+						<Private-Package>org.universAAL.ontology;-split-package:=first</Private-Package>
 						<Export-Package>org.universAAL.ontology.medMgr</Export-Package>
 					</instructions>
 				</configuration>
