--- a/ont.medication/pom.xml
+++ b/ont.medication/pom.xml
@@ -8,6 +8,7 @@
 		<relativePath>../ont.pom</relativePath>
 	</parent>
 	<artifactId>ont.medication</artifactId>
+	<groupId>org.universAAL.ontology</groupId>
 	<version>1.3.3-SNAPSHOT</version>
 	<name>Medication Manager Service - Ontology</name>
 	<description>Medication Manager ontology</description>
