--- a/nutritional/nutritional.client/pom.xml
+++ b/nutritional/nutritional.client/pom.xml
@@ -56,13 +56,21 @@
 
 		<!-- Nutritional own libs -->
 		<dependency>
-			<groupId>axis</groupId>
-			<artifactId>axis-pax</artifactId>
+			<groupId>org.apache.axis</groupId>
+			<artifactId>axis</artifactId>
 			<version>1.4</version>
 		</dependency>
-		<!-- <dependency> <groupId>org.apache.axis</groupId> <artifactId>axis-jaxrpc</artifactId> 
-			<version>1.4</version> </dependency> <dependency> <groupId>commons-discovery</groupId> 
-			<artifactId>commons-discovery</artifactId> <version>0.5</version> </dependency> -->
+		<!-- Axis has problem with OPS4J logging. Use our axis/axis-pax/1.4 instead when running-->
+		<dependency>
+			<groupId>org.apache.axis</groupId>
+			<artifactId>axis-jaxrpc</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<!-- <dependency>
+			<groupId>commons-discovery</groupId>
+			<artifactId>commons-discovery</artifactId>
+			<version>0.5</version>
+		</dependency>-->
 
 	</dependencies>
 
@@ -80,33 +88,35 @@
 						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
 						<Export-Package></Export-Package>
 						<Private-Package>
-						na.*,
-						org.universAAL.AALapplication.nutritional.*,
-						javax.xml.rpc.*, javax.xml.soap
+							na.*,
+							org.universAAL.AALapplication.nutritional.*
 						</Private-Package>
-						<Import-Package>javax.swing, javax.swing.border, javax.servlet.*,
-						  javax.activation, javax.xml.transform, org.w3c.dom,
-						  javax.xml.datatype, javax.xml.namespace, 
-						  org.apache.axis, org.apache.axis.client, org.apache.axis.constants,
-						  org.apache.axis.description, org.apache.axis.encoding,
-						  org.apache.axis.encoding.ser, org.apache.axis.soap,
-						  org.apache.axis.types, org.apache.axis.utils,
-						  org.apache.commons.logging, org.osgi.framework,
-						  org.universAAL.middleware.container,
-						  org.universAAL.middleware.container.osgi,
-						  org.universAAL.middleware.container.osgi.util,
-						  org.universAAL.middleware.container.utils,
-						  org.universAAL.middleware.owl, org.universAAL.middleware.owl.supply,
-						  org.universAAL.middleware.rdf, org.universAAL.middleware.rdf.impl,
-						  org.universAAL.middleware.service,
-						  org.universAAL.middleware.service.owl,
-						  org.universAAL.middleware.service.owls.process,
-						  org.universAAL.middleware.service.owls.profile,
-						  org.universAAL.middleware.ui, org.universAAL.middleware.ui.owl,
-						  org.universAAL.middleware.ui.rdf, org.universAAL.middleware.util,
-						  org.universAAL.ontology.medMgr, org.universAAL.ontology.nutrition,
-						  org.universAAL.ontology.nutrition.profile,
-						  org.universAAL.ontology.profile, org.xml.sax</Import-Package>
+						<Import-Package>javax.swing, javax.swing.border,
+							javax.xml.datatype, javax.xml.namespace,
+							javax.xml.rpc, javax.xml.rpc.encoding, org.apache.axis, org.apache.axis.client,
+							org.apache.axis.constants, org.apache.axis.description,
+							org.apache.axis.encoding,
+							org.apache.axis.encoding.ser, org.apache.axis.soap, org.apache.axis.types,
+							org.apache.axis.utils,
+							org.apache.commons.logging, org.osgi.framework, org.universAAL.middleware.container,
+							org.universAAL.middleware.container.osgi,
+							org.universAAL.middleware.container.osgi.util,
+							org.universAAL.middleware.container.utils,
+							org.universAAL.middleware.owl,
+							org.universAAL.middleware.owl.supply,
+							org.universAAL.middleware.rdf,
+							org.universAAL.middleware.rdf.impl,
+							org.universAAL.middleware.service.owl,
+							org.universAAL.middleware.service,
+							org.universAAL.middleware.service.owls.process,
+							org.universAAL.middleware.service.owls.profile,
+							org.universAAL.middleware.ui, org.universAAL.middleware.ui.owl,
+							org.universAAL.middleware.ui.rdf,
+							org.universAAL.middleware.util, org.universAAL.ontology.medMgr,
+							org.universAAL.ontology.nutrition,
+							org.universAAL.ontology.nutrition.profile,
+							org.universAAL.ontology.profile, org.xml.sax
+						</Import-Package>
 					</instructions>
 				</configuration>
 			</plugin>
