Fixed main problems with CHE. One problem remaing: the tel property is not working so I need to use other property in the PersonalInformationSubprofile to store gsm number

--- a/medication/medication.manager.user.management/src/main/resources/newVCardNikola.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardNikola.properties
@@ -4,10 +4,9 @@ lastRevision=26/03/2012
 nicname=bill1
 displayName=Nikola
 uciLable=uciLableBill1
-uciAdditionalData=uciAdditionalDataBill1
+uciAdditionalData=+3598777591
 aboutMe=aboutMe Nikola
 bday=19/2/1965
 fn=Nikola Johnson
-tel=+89:cell;+591:msg;+557:video;+50:voice;+553:fax
-email=nikola@gmail.com:internet;nikola400@mail.com:x400
+type=Caregiver
 
