--- a/medication/medication.manager.user.management/src/main/resources/newVCardNikola.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardNikola.properties
@@ -1,7 +1,7 @@
 userUri=urn:org.universAAL.aal_space:user_env#nikola
 vCardVersion=5.0
 lastRevision=26/03/2012
-nicname=bill1
+nicname=nikola
 displayName=Nikola
 uciLable=uciLableBill1
 uciAdditionalData=+3598777591
