Added dummy users from the database to CHE. Added method in PersonDao that returns null if not find a person with specific uri. Small changes to code

--- a/medication/medication.manager.user.management/src/main/resources/newVCardNikola.properties
+++ b/medication/medication.manager.user.management/src/main/resources/newVCardNikola.properties
@@ -3,7 +3,7 @@ vCardVersion=5.0
 lastRevision=26/03/2012
 nicname=nikola
 displayName=Nikola
-uciLable=uciLableBill1
+uciLable=uciLableNikola
 uciAdditionalData=+3598777591
 aboutMe=aboutMe Nikola
 bday=19/2/1965
