--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -5,3 +5,4 @@ medication.manager.http.session.timer.checker.interval.in.minutes=5
 medication.manager.debug.write.file=on
 medication.manager.health.treatment.service.mocked=on
 medication.manager.load.prescriptionsdtos=off
+medication.manager.insert.dummy.users.into.che=on
