--- a/medication/medication.manager.servlet.ui.configuration/pom.xml
+++ b/medication/medication.manager.servlet.ui.configuration/pom.xml
@@ -29,19 +29,13 @@
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
-      <artifactId>medication.manager.persistence</artifactId>
+      <artifactId>medication.manager.user.management</artifactId>
       <version>D.1-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.servlet.ui.base</artifactId>
-      <version>D.1-SNAPSHOT</version>
-    </dependency>
-
-    <dependency>
-      <groupId>org.universAAL.AALapplication</groupId>
-      <artifactId>medication.missing.services.simulation</artifactId>
       <version>D.1-SNAPSHOT</version>
     </dependency>
 
