--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -2,7 +2,7 @@ medication.manager.reminder.timeout=10
 medication.manager.intake.interval=1
 medication.manager.http.session.expire.timeout.in.minutes=60
 medication.manager.http.session.timer.checker.interval.in.minutes=5
-medication.manager.debug.write.file=on
+medication.manager.debug.write.file=off
 medication.manager.health.treatment.service.mocked=on
 medication.manager.load.prescriptionsdtos=off
 medication.manager.insert.dummy.users.into.che=on
