Language of the service was hardcoded to EN. Removed, now the service checks language defined at system.properties (JVM)

--- a/nutritional/nutritional.client/pom.xml
+++ b/nutritional/nutritional.client/pom.xml
@@ -12,6 +12,7 @@
 
 	<artifactId>nutritional.client</artifactId>
 	<packaging>bundle</packaging>
+	<name>NUTRITIONAL JUANITO</name>
 
 	<dependencies>
 		<dependency>
