--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.universAAL</groupId>
 		<artifactId>uAAL.pom</artifactId>
-		<version>1.3.0</version>
+		<version>2.0.0</version>
 	</parent>
 
 	<groupId>org.universAAL.AALapplication</groupId>
 	<artifactId>new_services.pom</artifactId>
-	<version>D.3</version>
+	<version>E.0</version>
 	<packaging>pom</packaging>
 	<name>Parent POM for all AAL services</name>
 	<description>Contains repository, deployment, and other info for all AALapplications</description>
@@ -34,7 +34,7 @@
 		<maven.compile.source>1.5</maven.compile.source>
 		<maven.compile.target>1.5</maven.compile.target>
 		<gforge.project.name>new_services</gforge.project.name>
-		<platform.version>1.3.3-SNAPSHOT</platform.version>
+		<platform.version>2.0.0</platform.version>
 		<service.name.svn></service.name.svn>
 	</properties>
 
