--- a/new_services.pom/pom.xml
+++ b/new_services.pom/pom.xml
@@ -16,16 +16,16 @@
 	<description>Contains repository, deployment, and other info for all AALapplications</description>
 
 	<modules>
-		<module>../ontologies/ont.pom</module>
-	<!--	<module>../health/health.pom</module> 
-		<module>../personal_safety/personal_safety.pom</module> -->
+	<!--	<module>../ontologies/ont.pom</module>
+		<module>../health/health.pom</module> 
+		<module>../personal_safety/personal_safety.pom</module> 
 		<module>../food_shopping/pom</module>
 		<module>../safety_home/pom</module>
 		<module>../medication/medication.manager.pom</module>
 		<module>../aal_eficiency/AALfficiency.pom</module>
-		<module>../agenda/agenda.pom</module>
-		<module>../nutritional/nutritional.pom</module>
 		<module>../help_when_out/hwo.pom</module>
+		<module>../agenda/agenda.pom</module>-->
+		<module>../nutritional/nutritional.pom</module>
 	</modules>
 
 	<properties>
@@ -85,7 +85,7 @@
 			<dependency>
 				<groupId>org.universAAL.ontology.services</groupId>
 				<artifactId>ont.pom</artifactId>
-				<version>1.3.3-SNAPSHOT</version>
+				<version>2.0.0</version>
 				<type>pom</type>
 				<scope>import</scope>
 			</dependency>
