--- a/nutritional/nutritional.client/pom.xml
+++ b/nutritional/nutritional.client/pom.xml
@@ -6,13 +6,13 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>nutritional.pom</artifactId>
-		<version>D.3.1-SNAPSHOT</version>
+		<version>E.0</version>
 		<relativePath>../nutritional.pom</relativePath>
 	</parent>
 
 	<artifactId>nutritional.client</artifactId>
 	<packaging>bundle</packaging>
-	<name>NUTRITIONAL JUANITO</name>
+	<name>Nutritional Advisor</name>
 
 	<dependencies>
 		<dependency>
