--- a/ontologies/ont.fitbitdata/pom.xml
+++ b/ontologies/ont.fitbitdata/pom.xml
@@ -5,12 +5,12 @@
   <parent>
     <groupId>org.universAAL.ontology.services</groupId>
     <artifactId>ont.pom</artifactId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>2.0.0</version>
     <relativePath>../ont.pom</relativePath>
   </parent>
   <groupId>org.universAAL.ontology</groupId>
   <artifactId>ont.fitbitdata</artifactId>
-  <version>1.3.3-SNAPSHOT</version>
+  <version>2.0.0</version>
   <packaging>bundle</packaging>
   <name>AALfficiency Service - Fitbit Data</name>
   <build>
