--- a/ontologies/ont.medication/pom.xml
+++ b/ontologies/ont.medication/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.3.3-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../ont.pom</relativePath>
 	</parent>
 	<artifactId>ont.medication</artifactId>
 	<groupId>org.universAAL.ontology</groupId>
-	<version>1.3.3-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<name>Medication Manager Service - Ontology</name>
 	<description>Medication Manager ontology</description>
 	<packaging>bundle</packaging>
