--- a/ont.agendaEventSelection/pom.xml
+++ b/ont.agendaEventSelection/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.3.3-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../ont.pom</relativePath>
 	</parent>
 	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.agendaEventSelection</artifactId>
-	<version>1.3.3-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<packaging>bundle</packaging>
 	<name>Agenda AAL Service Event Selection Ontology</name>
 	<description>Ontology for selecting Agenda and Reminders AAL service events</description>
