--- a/ont.ltba/pom.xml
+++ b/ont.ltba/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.3.3-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../ont.pom</relativePath>
 	</parent>
 	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.ltba</artifactId>
-	<version>1.3.3-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<packaging>bundle</packaging>
 	<name>LTBA Service - Ontology</name>
 	<description>The Long Term Behaviour Analyzer Ontologies</description>
