--- a/ont.nutrition/pom.xml
+++ b/ont.nutrition/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.3.3-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../ont.pom</relativePath>
 	</parent>
 	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.nutrition</artifactId>
-	<version>1.3.3-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<packaging>bundle</packaging>
 	<name>Nutritional Advisor Service - Ontology</name>
 	<description>Ontology for the services that manage Context History</description>
