--- a/ont.pom/pom.xml
+++ b/ont.pom/pom.xml
@@ -5,11 +5,11 @@
   <parent>
     <groupId>org.universAAL.ontology</groupId>
     <artifactId>ont.pom</artifactId>
-    <version>1.3.3-SNAPSHOT</version>
+    <version>2.0.0</version>
   </parent>
   <groupId>org.universAAL.ontology.services</groupId>
   <artifactId>ont.pom</artifactId>
-  <version>1.3.3-SNAPSHOT</version>
+  <version>2.0.0</version>
   <packaging>pom</packaging>
   <name>universAAL Ontology Suite</name>
   <description>Set of ontologies used within universAAL</description>
@@ -26,9 +26,9 @@
     <module>../ont.fitbitdata</module>
     <module>../ont.readenergy</module>
     <module>../ont.medication</module>
-    <module>../ont.nutrition</module>
     <module>../ont.safety</module>
-    <module>../ont.shopping</module>
+    <module>../ont.shopping</module> 
+	<module>../ont.nutrition</module>
   </modules>
   <scm>
     <connection>${svn.base}/${project.artifactId}</connection>
