--- a/ont.safety/pom.xml
+++ b/ont.safety/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>1.3.3-SNAPSHOT</version>
+		<version>2.0.0</version>
 		<relativePath>../ont.pom</relativePath>
 	</parent>
 	<groupId>org.universAAL.ontology</groupId>
 	<artifactId>ont.safety</artifactId>
-	<version>1.3.3-SNAPSHOT</version>
+	<version>2.0.0</version>
 	<packaging>bundle</packaging>
 	<name>Safety and Security Service - Ontology</name>
 	<description>An ontology defining the most general concepts for Safety and Security at home</description>
