--- a/long_term_behav/ltba.nomhad.gateway/pom.xml
+++ b/long_term_behav/ltba.nomhad.gateway/pom.xml
@@ -1,29 +1,51 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <parent>
-    <artifactId>ltba.pom</artifactId>
-    <groupId>org.universAAL.AALapplication</groupId>
-    <version>D.0.1-SNAPSHOT</version>
-  </parent>
-  <groupId>org.universAAL.AALapplication</groupId>
-  <artifactId>ltba.nomhad.gateway</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>bundle</packaging>
-  <name>LTBA to Nomhad gateway</name>
-  <description>		</description>
-  
-  
-  
-  <build>
-  	<plugins>
-  		<plugin>
-  			<groupId>org.apache.felix</groupId>
-  			<artifactId>maven-bundle-plugin</artifactId>
-  			<version>2.3.7</version>
-  		</plugin>
-  	</plugins>
-  </build>
-  <dependencies>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+	<parent>
+		<artifactId>ltba.pom</artifactId>
+		<groupId>org.universAAL.AALapplication</groupId>
+		<version>D.0.1-SNAPSHOT</version>
+	</parent>
+	<groupId>org.universAAL.AALapplication</groupId>
+	<artifactId>ltba.nomhad.gateway</artifactId>
+	<version>${parent.version}</version>
+	<packaging>bundle</packaging>
+	<name>LTBA to Nomhad gateway</name>
+	<description>		</description>
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.apache.felix</groupId>
+				<artifactId>maven-bundle-plugin</artifactId>
+				<version>2.3.7</version>
+				<extensions>true</extensions>
+				<configuration>
+					<instructions>
+						<Bundle-Name>${project.name}</Bundle-Name>
+						<Bundle-Activator>es.tsb.ltba.nomhad.activator.Activator</Bundle-Activator>
+						<Bundle-Description>${project.description}</Bundle-Description>
+						<Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
+
+						<!--
+							<Import-Package>*,org.universaal.ltba.ui.impl.main</Import-Package>
+						-->
+
+					</instructions>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+	<dependencies>
+		<dependency>
+			<groupId>org.apache.felix</groupId>
+			<artifactId>org.osgi.core</artifactId>
+			<version>1.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.universAAL.middleware</groupId>
+			<artifactId>mw.bus.context.osgi</artifactId>
+			<version>1.3.0</version>
+		</dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.osgi.core</artifactId>
@@ -32,8 +54,8 @@
 		<dependency>
 			<groupId>org.apache.httpcomponents</groupId>
 			<artifactId>httpclient</artifactId>
-			<version>4.1</version>	
+			<version>4.1</version>
 			<scope>compile</scope>
 		</dependency>
-  </dependencies>
+	</dependencies>
 </project>
