--- a/long_term_behav/ltba.pom/pom.xml
+++ b/long_term_behav/ltba.pom/pom.xml
@@ -4,7 +4,7 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>D.0</version>
+		<version>D.1</version>
 		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 	<artifactId>ltba.pom</artifactId>
@@ -48,6 +48,16 @@
 				<groupId>org.universAAL.AALapplication</groupId>
 				<artifactId>ltba.ui</artifactId>
 				<version>${project.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.codemodel</groupId>
+				<artifactId>codemodel</artifactId>
+				<version>2.6</version>
+			</dependency>
+			<dependency>
+				<groupId>com.sun.xml.bind</groupId>
+				<artifactId>jaxb-xjc</artifactId>
+				<version>2.1.6</version>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
