--- a/medication/medication.manager.configuration/pom.xml
+++ b/medication/medication.manager.configuration/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>medication.manager.pom</artifactId>
-    <version>D.1-SNAPSHOT</version>
+    <version>D.3-SNAPSHOT</version>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
 
@@ -24,7 +24,7 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
         <artifactId>ont.profile</artifactId>
-        <version>1.3.0</version>
+        <version>1.3.4-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
