--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -4,11 +4,11 @@
   <parent>
     <artifactId>new_services.pom</artifactId>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>D.1</version>
+    <version>D.3</version>
     <relativePath>../../new_services.pom</relativePath>
   </parent>
   <artifactId>medication.manager.pom</artifactId>
-  <version>D.1-SNAPSHOT</version>
+  <version>D.3-SNAPSHOT</version>
   <packaging>pom</packaging>
   <name>Medication Manager AAL Service</name>
   <url>http://forge.universaal.org/wiki/new_services:Medication_manager_universAAL_service</url>
@@ -67,7 +67,6 @@
     <module>../medication.manager.servlet.ui.configuration</module>
     <module>../medication.manager.event.issuer</module>
     <module>../medication.manager.user.management</module>
-    <!--  <module>../medication.manager.integration.tests</module> -->
-    <!--<module>../medication.manager.ui.runner</module>-->
+    <module>../medication.manager.karaf.feature</module>
   </modules>
 </project>
