--- a/ont.medication/pom.xml
+++ b/ont.medication/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<groupId>org.universAAL.ontology.services</groupId>
 		<artifactId>ont.pom</artifactId>
-		<version>2.0.0</version>
+		<version>1.3.3-SNAPSHOT</version>
 		<relativePath>../ont.pom</relativePath>
 	</parent>
 	<artifactId>ont.medication</artifactId>
 	<groupId>org.universAAL.ontology</groupId>
-	<version>2.0.0</version>
+	<version>1.3.3-SNAPSHOT</version>
 	<name>Medication Manager Service - Ontology</name>
 	<description>Medication Manager ontology</description>
 	<packaging>bundle</packaging>
@@ -23,14 +23,17 @@
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.phWorld</artifactId>
+      <version>1.3.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile</artifactId>
+      <version>1.3.4-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.universAAL.ontology</groupId>
 			<artifactId>ont.profile.health</artifactId>
+      <version>1.3.3-SNAPSHOT</version>
 		</dependency>
 	</dependencies>
 
