--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -63,6 +63,7 @@
     <module>../medication.missing.services.simulation</module>
     <module>../medication.manager.ui</module>
     <module>../medication.manager.servlet.ui</module>
+    <module>../medication.manager.servlet.ui.acquire.medicine</module>
     <module>../medication.manager.servlet.ui.base</module>
     <module>../medication.manager.servlet.ui.configuration</module>
     <module>../medication.manager.event.issuer</module>
