--- a/.gitignore
+++ b/.gitignore
@@ -151,6 +151,8 @@ medication/medication.manager.service/*.iml
 medication/medication.manager.service/.project
 medication/medication.manager.service/.settings
 medication/medication.manager.service/target
+medication/medication.manager.servlet.ui.acquire.medicine/*.iml
+medication/medication.manager.servlet.ui.acquire.medicine/target
 medication/medication.manager.servlet.ui.base/*.iml
 medication/medication.manager.servlet.ui.base/target
 medication/medication.manager.servlet.ui.configuration/*.iml
