--- a/help_when_out/hwo.pom/pom.xml
+++ b/help_when_out/hwo.pom/pom.xml
@@ -4,12 +4,12 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>D.3</version>
+		<version>E.0</version>
 		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
 	<artifactId>hwo.pom</artifactId>
-	<version>D.3.1-SNAPSHOT</version>
+	<version>E.0</version>
 	<packaging>pom</packaging>
 
 	<name>Help When Outdoor AAL Service</name>
