Started the development of the : Intake log and plan review combined - web (servlets)

--- a/medication/medication.manager.pom/pom.xml
+++ b/medication/medication.manager.pom/pom.xml
@@ -64,6 +64,7 @@
     <module>../medication.manager.ui</module>
     <module>../medication.manager.servlet.ui</module>
     <module>../medication.manager.servlet.ui.acquire.medicine</module>
+    <module>../medication.manager.servlet.ui.review</module>
     <module>../medication.manager.servlet.ui.base</module>
     <module>../medication.manager.servlet.ui.configuration</module>
     <module>../medication.manager.event.issuer</module>
