agenda transfer to E.0 (mw2.0.0), feature and runner also. MIT license removed. everything deployed

--- a/agenda/agenda.runner/runner/configurations/services/org.ops4j.pax.logging.properties
+++ b/agenda/agenda.runner/runner/configurations/services/org.ops4j.pax.logging.properties
@@ -57,8 +57,6 @@ log4j.appender.jgroups.logsetup.append=true
 log4j.appender.jgroups.logsetup.maxFileSize=1MB
 log4j.appender.jGroups.maxBackupIndex=10
 
-
-
 #uAAL-MW logger
 log4j.logger.org.universAAL.mw = DEBUG, uAAL.mw.logsetup
 
@@ -69,3 +67,14 @@ log4j.appender.uAAL.mw.logsetup.file=${karaf.data}/log/uAAL-MW.log
 log4j.appender.uAAL.mw.logsetup.append=true
 log4j.appender.uAAL.mw.logsetup.maxFileSize=1MB
 log4j.appender.uAAL.mw.logsetup.maxBackupIndex=10
+
+#uAAL-UI logger
+log4j.logger.org.universAAL.ui = TRACE, uAAL.ui.logsetup
+log4j.logger.org.universAAL.mw.bus.ui = TRACE, uAAL.ui.logsetup
+log4j.appender.uAAL.ui.logsetup=org.apache.log4j.RollingFileAppender
+log4j.appender.uAAL.ui.logsetup.layout=org.apache.log4j.PatternLayout
+log4j.appender.uAAL.ui.logsetup.layout.ConversionPattern = %d{ISO8601} | %-5.5p | %-16.16t | %-32.32c{1} | %X{bundle.id} - %X{bundle.name} - %X{bundle.version} | %m%n
+log4j.appender.uAAL.ui.logsetup.file=${karaf.data}/log/uAAL-UI.log
+log4j.appender.uAAL.ui.logsetup.append=true
+log4j.appender.uAAL.ui.logsetup.maxFileSize=1MB
+log4j.appender.uAAL.ui.logsetup.maxBackupIndex=10
