--- a/agenda/agenda.runner/runner/felix/config.ini
+++ b/agenda/agenda.runner/runner/felix/config.ini
@@ -26,84 +26,121 @@ felix.auto.start.1=\
 "file:bundles/org.apache.felix.gogo.runtime_0.10.0.jar" \
 "file:bundles/org.apache.felix.gogo.shell_0.10.0.jar"
 felix.auto.start.5=\
+"file:bundles/org.osgi.core_4.1.jar" \
 "file:bundles/org.osgi.compendium_4.1.0.jar" \
 "file:bundles/org.apache.felix.configadmin_1.2.4.jar" \
-"file:bundles/org.apache.felix.upnp.basedriver_0.8.0.jar" \
-"file:bundles/bcmail_1.46.jar" \
-"file:bundles/bcprov_1.46.jar" \
+"file:bundles/org.apache.felix.log_1.0.1.jar" \
+"file:bundles/org.apache.felix.fileinstall_3.1.10.jar" \
+"file:bundles/org.apache.felix.bundlerepository_1.4.2.jar" \
+"file:bundles/org.jgroups_3.3.0.Alpha1.jar" \
+"file:bundles/ch.ethz.iks.slp_1.0.2.RC5.jar" \
+"file:bundles/org.openrdf.sesame2_2.6.0.jar" \
+"file:bundles/wrap_mvn_org.json_json_20090211_0.jar" \
+"file:bundles/org.apache.commons.lang_2.6.jar" \
+"file:bundles/wrap_mvn_commons-logging_commons-logging_1.1.1_0.jar" \
+"file:bundles/org.apache.commons.codec_1.5.jar" \
+"file:bundles/wrap_mvn_backport-util-concurrent_backport-util-concurrent_3.1_0.jar" \
+"file:bundles/org.mnode.ical4j_1.0.2.jar" \
 "file:bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
-"file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.3.jar" \
-"file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.3.jar" \
+"file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
+"file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
 "file:bundles/org.ops4j.pax.configmanager_0.2.2.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-jetty-bundle_1.0.5.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-spi_1.0.5.jar" \
 "file:bundles/org.ops4j.pax.web.pax-web-api_1.0.5.jar" \
 "file:bundles/org.ufacekit.osgi.swingx.osgi_0.9.2.jar" \
-"file:bundles/ch.ethz.iks.r_osgi.remote_1.0.0.RC4.jar" \
 "file:bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
 "file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
 "file:bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
-"file:bundles/wrap_mvn_org.jdom_jdom_1.1.3_0.jar" \
-"file:bundles/mw.container.xfaces.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.container.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.acl.interfaces.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.acl.upnp.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.acl.rosgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.acl.bridge.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.bus.model.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.data.representation.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.data.serialization.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.bus.service.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.bus.context.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.bus.ui.osgi_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ont.phWorld_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ont.profile_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ont.che_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ont.impairment_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ont.profile.health_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ont.profile.uipreferences_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ont.profile.userid_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ont.profile.ui.mainmenu_1.3.1.SNAPSHOT.jar" \
-"file:bundles/security.authorizator_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ri.servicegateway_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ui.dm_1.3.1.SNAPSHOT.jar" \
-"file:bundles/org.universAAL.ui.handler.gui.swing.bluesteelLAF_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ui.handler.gui.swing_1.3.1.SNAPSHOT.jar" \
-"file:bundles/ui.handler.web_1.3.1.SNAPSHOT.jar" \
-"file:bundles/mw.container.xfaces.osgi_1.3.0.jar" \
-"file:bundles/mw.acl.interfaces.osgi_1.3.0.jar" \
-"file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
-"file:bundles/org.ops4j.pax.logging.pax-logging-service_1.6.2.jar" \
+"file:bundles/mw.schemas_2.0.0.jar" \
+"file:bundles/mw.container.xfaces.osgi_2.0.0.jar" \
+"file:bundles/mw.container.osgi_2.0.0.jar" \
+"file:bundles/mw.interfaces.osgi_2.0.0.jar" \
+"file:bundles/mw.connectors.api.osgi_2.0.0.jar" \
+"file:bundles/mw.connectors.communication.jgroups.osgi_2.0.0.jar" \
+"file:bundles/mw.connectors.discovery.slp.osgi_2.0.0.jar" \
+"file:bundles/mw.modules.api.osgi_2.0.0.jar" \
+"file:bundles/mw.modules.communication.osgi_2.0.0.jar" \
+"file:bundles/mw.modules.aalspace.osgi_2.0.0.jar" \
+"file:bundles/mw.brokers.api.osgi_2.0.0.jar" \
+"file:bundles/mw.brokers.control.osgi_2.0.0.jar" \
+"file:bundles/mw.managers.api.osgi_2.0.0.jar" \
+"file:bundles/mw.managers.aalspace.osgi_2.0.0.jar" \
+"file:bundles/mw.data.representation.osgi_2.0.0.jar" \
+"file:bundles/mw.data.serialization.osgi_2.0.0.jar" \
+"file:bundles/mw.bus.model.osgi_2.0.0.jar" \
+"file:bundles/mw.bus.service.osgi_2.0.0.jar" \
+"file:bundles/mw.bus.context.osgi_2.0.0.jar" \
+"file:bundles/mw.bus.ui.osgi_2.0.0.jar" \
+"file:bundles/mw.bus.tracker.osgi_2.0.0.jar" \
+"file:bundles/ont.phWorld_2.0.0.jar" \
+"file:bundles/ont.profile_2.0.0.jar" \
+"file:bundles/ont.che_2.0.0.jar" \
+"file:bundles/ont.impairment_2.0.0.jar" \
+"file:bundles/ont.furniture_2.0.0.jar" \
+"file:bundles/ont.health.measurement_2.0.0.jar" \
+"file:bundles/ont.health.disease_2.0.0.jar" \
+"file:bundles/ont.profile.health_2.0.0.jar" \
+"file:bundles/ont.device_2.0.0.jar" \
+"file:bundles/ont.languages_2.0.0.jar" \
+"file:bundles/ont.profile.ui.preferences_2.0.0.jar" \
+"file:bundles/ont.profile.userid_2.0.0.jar" \
+"file:bundles/ont.profile.ui.mainmenu_2.0.0.jar" \
+"file:bundles/ctxt.che_2.0.0.jar" \
+"file:bundles/ctxt.prof.server_2.0.0.jar" \
+"file:bundles/security.authorizator_2.0.0.jar" \
+"file:bundles/ri.servicegateway_2.0.0.jar" \
+"file:bundles/ui.dm_2.0.0.jar" \
+"file:bundles/ui.handler.web_2.0.0.jar" \
+"file:bundles/mw.container.xfaces.osgi_2.0.0.jar" \
 "file:bundles/org.osgi.compendium_4.1.0.jar" \
 "file:bundles/org.apache.felix.log_1.0.1.jar" \
 "file:bundles/org.apache.felix.configadmin_1.2.4.jar" \
 "file:bundles/org.apache.felix.fileinstall_3.1.10.jar" \
 "file:bundles/org.ops4j.pax.configmanager_0.2.2.jar" \
 "file:bundles/org.apache.felix.bundlerepository_1.4.2.jar" \
-"file:bundles/mw.container.osgi_1.3.0.jar" \
+"file:bundles/org.ops4j.pax.logging.pax-logging-api_1.6.2.jar" \
+"file:bundles/mw.container.osgi_2.0.0.jar" \
+"file:bundles/mw.data.representation.osgi_2.0.0.jar" \
+"file:bundles/wrap_mvn_javax.xml.stream_stax-api_1.0-2_0.jar" \
+"file:bundles/wrap_mvn_javax.activation_activation_1.1_0.jar" \
+"file:bundles/wrap_mvn_javax.xml.bind_jaxb-api_2.1_0.jar" \
+"file:bundles/mw.schemas_2.0.0.jar" \
+"file:bundles/mw.interfaces.osgi_2.0.0.jar" \
+"file:bundles/wrap_mvn_org.json_json_20090211_0.jar" \
+"file:bundles/mw.connectors.api.osgi_2.0.0.jar" \
+"file:bundles/mw.brokers.api.osgi_2.0.0.jar" \
+"file:bundles/mw.modules.api.osgi_2.0.0.jar" \
+"file:bundles/mw.managers.api.osgi_2.0.0.jar" \
 "file:bundles/wrap_mvn_org.bouncycastle_jce.jdk13_144_0.jar" \
-"file:bundles/mw.acl.upnp.osgi_1.3.0.jar" \
-"file:bundles/org.apache.felix.upnp.basedriver_0.8.0.jar" \
-"file:bundles/mw.bus.model.osgi_1.3.0.jar" \
-"file:bundles/mw.data.representation.osgi_1.3.0.jar" \
-"file:bundles/mw.bus.context.osgi_1.3.0.jar" \
-"file:bundles/mw.bus.service.osgi_1.3.0.jar" \
-"file:bundles/wrap_mvn_java3d_vecmath_1.3.1_0.jar" \
-"file:bundles/wrap_mvn_java3d_j3d-core_1.3.1_0.jar" \
+"file:bundles/org.jgroups_3.3.1.Final.jar" \
+"file:bundles/mw.modules.communication.osgi_2.0.0.jar" \
+"file:bundles/mw.connectors.communication.jgroups.osgi_2.0.0.jar" \
+"file:bundles/ch.ethz.iks.slp_1.0.2.RC5.jar" \
+"file:bundles/mw.brokers.control.osgi_2.0.0.jar" \
+"file:bundles/mw.modules.aalspace.osgi_2.0.0.jar" \
+"file:bundles/mw.connectors.discovery.slp.osgi_2.0.0.jar" \
+"file:bundles/mw.managers.aalspace.osgi_2.0.0.jar" \
+"file:bundles/mw.bus.model.osgi_2.0.0.jar" \
+"file:bundles/mw.bus.service.osgi_2.0.0.jar" \
 "file:bundles/wrap_mvn_jp.go.ipa_jgcl_1.0_0.jar" \
-"file:bundles/ont.phWorld_1.3.0.jar" \
-"file:bundles/ont.profile_1.3.0.jar" \
-"file:bundles/ont.agenda_1.3.1.SNAPSHOT.jar" \
-"file:bundles/agenda.client_1.3.0.jar" \
-"file:bundles/mw.bus.ui.osgi_1.3.0.jar" \
+"file:bundles/ont.phWorld_2.0.0.jar" \
+"file:bundles/ont.profile_2.0.0.jar" \
+"file:bundles/ont.agenda_2.0.0.jar" \
+"file:bundles/ont.agendaEventSelection_2.0.0.jar" \
+"file:bundles/mw.bus.context.osgi_2.0.0.jar" \
+"file:bundles/agenda.client_2.0.0.jar" \
+"file:bundles/mw.bus.ui.osgi_2.0.0.jar" \
 "file:bundles/com.mysql.jdbc_5.1.17.jar" \
 "file:bundles/wrap_mvn_activesoap_jaxp-api_1.3_0.jar" \
-"file:bundles/agenda.server_1.3.0.jar" \
-"file:bundles/ont.agendaEventSelection_1.3.1.SNAPSHOT.jar" \
-"file:bundles/agenda.eventSelection.client_1.3.0.jar" \
-"file:bundles/agenda.gui_1.3.0.jar" \
-"file:bundles/agenda.remote_1.3.0.jar" \
-"file:bundles/agenda.eventSelection.server_1.3.0.jar"
+"file:bundles/agenda.server_2.0.0.jar" \
+"file:bundles/agenda.eventSelection.client_2.0.0.jar" \
+"file:bundles/agenda.gui_2.0.0.jar" \
+"file:bundles/agenda.remote_2.0.0.jar" \
+"file:bundles/agenda.eventSelection.server_2.0.0.jar"
+felix.auto.install.5=\
+"file:bundles/org.universAAL.ui.handler.gui.swing.bluesteelLAF_2.0.0.jar" \
+"file:bundles/ui.handler.gui.swing_2.0.0.jar"
 
 ##############################
 # System properties
