--- a/agenda/agenda.gui/pom.xml
+++ b/agenda/agenda.gui/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>agenda.pom</artifactId>
-		<version>D.3.1-SNAPSHOT</version>
+		<version>E.0</version>
 		<relativePath>../agenda.pom/pom.xml</relativePath>
 	</parent>
 	
