--- a/agenda/agenda.pom/pom.xml
+++ b/agenda/agenda.pom/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<groupId>org.universAAL.AALapplication</groupId>
 		<artifactId>new_services.pom</artifactId>
-		<version>D.3</version>
+		<version>E.0</version>
 		<relativePath>../../new_services.pom/pom.xml</relativePath>
 	</parent>
 
 	<artifactId>agenda.pom</artifactId>
-	<version>D.3.1-SNAPSHOT</version>
+	<version>E.0</version>
 	<packaging>pom</packaging>
 
 	<name>Agenda AAL Service Parent POM</name>
