--- a/agenda/agenda.runner/runner/configurations/ctxt.che/CHe.properties
+++ b/agenda/agenda.runner/runner/configurations/ctxt.che/CHe.properties
@@ -3,7 +3,11 @@
 RECYCLE.KEEP_MSEC=15552000000
 RECYCLE.PERIOD_MSEC=5184000000
 RECYCLE.HOUR=22
+#debug to be removed for official version, false makes storage permanent (does not clean it when shutting down the platform)
+RECYCLE.DEBUG=true
 MOBILE.FLAG=<\!--CEv-->
 MOBILE.FILE=PMD-Events.txt
 STORE.IMPL=org.universAAL.context.che.database.impl.SesameBackend
 STORE.LOCATION=configurations/ctxt.che/store/
+# true so that CHE recognizes inheritance (from http://forge.universaal.org/wiki/uaal_context:Context_Management_Building_Block#Context_storage:_The_context_history_entrep.C3.B4t)
+STORE.PRELOAD=true
