Implemented task: To add notification to caregiver similar to the reminder dialog in case the AP doesn't respond in some predefined interval - UpsideDownDialog (depenends on the alert in the corresponding dispenser table record)
small refactoring

--- a/medication/medication.manager.configuration/src/main/resources/medication.properties
+++ b/medication/medication.manager.configuration/src/main/resources/medication.properties
@@ -1,4 +1,5 @@
 medication.manager.reminder.timeout=10
+medication.manager.upside.down.timeout=10
 medication.manager.intake.interval=1
 medication.manager.http.session.expire.timeout.in.minutes=60
 medication.manager.http.session.timer.checker.interval.in.minutes=5
