minor changes at pom files according to WP4 guidelines + configuration file to launch the service in eclipse

--- a/nutritional/nutritional.pom/pom.xml
+++ b/nutritional/nutritional.pom/pom.xml
@@ -12,7 +12,7 @@
 	</parent>
 
 	<artifactId>nutritional.pom</artifactId>
-	<version>E.0</version>
+	<version>E.0.1-SNAPSHOT</version>
 	<name>Nutritional Advisor AAL Service</name>
 	<packaging>pom</packaging>
 
