--- a/medication/medication.manager.persistence/pom.xml
+++ b/medication/medication.manager.persistence/pom.xml
@@ -6,7 +6,7 @@
 
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>D.3-SNAPSHOT</version>
+    <version>E.0-SNAPSHOT</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
@@ -19,13 +19,13 @@
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.configuration</artifactId>
-      <version>D.3-SNAPSHOT</version>
+      <version>E.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.medication</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
