--- a/medication/medication.manager.service/pom.xml
+++ b/medication/medication.manager.service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>medication.manager.pom</artifactId>
-    <version>D.3-SNAPSHOT</version>
+    <version>E.0-SNAPSHOT</version>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
   <artifactId>medication.manager.service</artifactId>
@@ -17,22 +17,22 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.medication</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.ui</artifactId>
-      <version>D.3-SNAPSHOT</version>
+      <version>E.0-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.universAAL.context</groupId>
       <artifactId>ctxt.che</artifactId>
-      <version> 1.3.3-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.persistence</artifactId>
-      <version>D.3-SNAPSHOT</version>
+      <version>E.0-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
