--- a/medication/medication.manager.servlet.ui/pom.xml
+++ b/medication/medication.manager.servlet.ui/pom.xml
@@ -7,7 +7,7 @@
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
     <artifactId>medication.manager.pom</artifactId>
-    <version>D.3-SNAPSHOT</version>
+    <version>E.0-SNAPSHOT</version>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
 
@@ -30,19 +30,19 @@
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.persistence</artifactId>
-      <version>D.3-SNAPSHOT</version>
+      <version>E.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.servlet.ui.base</artifactId>
-      <version>D.3-SNAPSHOT</version>
+      <version>E.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.missing.services.simulation</artifactId>
-      <version>D.3-SNAPSHOT</version>
+      <version>E.0-SNAPSHOT</version>
     </dependency>
 
   </dependencies>
