--- a/medication/medication.manager.ui/pom.xml
+++ b/medication/medication.manager.ui/pom.xml
@@ -3,7 +3,7 @@
   <modelVersion>4.0.0</modelVersion>
   <parent>
     <groupId>org.universAAL.AALapplication</groupId>
-    <version>D.3-SNAPSHOT</version>
+    <version>E.0-SNAPSHOT</version>
     <artifactId>medication.manager.pom</artifactId>
     <relativePath>../medication.manager.pom</relativePath>
   </parent>
@@ -17,25 +17,25 @@
     <dependency>
       <groupId>org.universAAL.ontology</groupId>
       <artifactId>ont.medication</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>2.0.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.manager.persistence</artifactId>
-      <version>D.3-SNAPSHOT</version>
+      <version>E.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.AALapplication</groupId>
       <artifactId>medication.missing.services.simulation</artifactId>
-      <version>D.3-SNAPSHOT</version>
+      <version>E.0-SNAPSHOT</version>
     </dependency>
 
     <dependency>
       <groupId>org.universAAL.middleware</groupId>
       <artifactId>mw.bus.ui.core</artifactId>
-      <version>1.3.3-SNAPSHOT</version>
+      <version>2.0.0</version>
     </dependency>
 
   </dependencies>
