--- a/health/health.pom/pom.xml
+++ b/health/health.pom/pom.xml
@@ -5,12 +5,12 @@
 	<parent>
 		<artifactId>new_services.pom</artifactId>
 		<groupId>org.universAAL.AALapplication</groupId>
-		<version>D.1</version>
+		<version>E.0</version>
 		<relativePath>../../new_services.pom</relativePath>
 	</parent>
 
 	<artifactId>health.pom</artifactId>
-	<version>D.1.1-SNAPSHOT</version>
+	<version>E.0.1-SNAPSHOT</version>
 	<packaging>pom</packaging>
 
 	<name>Health Management AAL Service</name>
@@ -34,8 +34,8 @@
 		<module>../health.profile.manager</module>
 		<module>../health.performedSession.manager</module>
 		<module>../health.treat.manager</module>
-		<module>../health.biomedicalsensors.server</module>
-		<module>../health.biomedicalsensors.uiclient</module>
+<!-- 		<module>../health.biomedicalsensors.server</module> -->
+<!-- 		<module>../health.biomedicalsensors.uiclient</module> -->
 		<module>../health.motivation</module>
 		<module>../health.ui.client</module>
 	</modules>
