--- a/health/health.profile.manager/pom.xml
+++ b/health/health.profile.manager/pom.xml
@@ -5,7 +5,7 @@
   <parent>
   	<groupId>org.universAAL.AALapplication</groupId>
   	<artifactId>health.pom</artifactId>
-  	<version>D.1.1-SNAPSHOT</version>
+  	<version>E.0.1-SNAPSHOT</version>
   	<relativePath>../health.pom</relativePath>
   </parent>
 
